- FIX: LyricWiki engine returned lyrics with URLs
- FIX: Opening web browser does not work on Ubuntu
- FIX: Validate repository content when loading it (patch from Laurent Cathala)
- FIX: Podcast file renaming is not possible [2897134]
- FIX: Progress bar should work for downloaded podcast entries
- FIX: Progress bar improvements [2942626]

aTunes 1.13.6
-------------
- FIX: ClassCastException when stopping radios/podcast feed entries
- FIX: Some Lucene resources were not closed
- INTERNAL: Updated Lyricsfly URL

aTunes 1.13.5
-------------
- FIX: MPlayer priority on Windows should be higher (patch by Ray Barlow)
- FIX: Windows Vista/7 ready application icons
- FIX: Show play list information enabled for more than one audio object [2786446]
- FIX: Sort by file name option sorts audio object in folder view in wrong order [2807803]
- FIX: Song info dialog not resizable [2824009]
- FIX: After renaming an audio file, repository keeps reference to old name
- FIX: Web browser does not open

aTunes 1.13.4
-------------
- Lyricsfly engine update
- FIX: Images with alpha channel are displayed wrong
- FIX: Windows 7 ready application icon
- FIX: Too much memory needed when retrieving artist images from Last.fm with original size
- FIX: Gui may freeze if audio files are on a remote storage device and the connection speed is slow

aTunes 1.13.3
-------------
- FIX: LyricWiki XML API is offline
- FIX: Search: wrong song is added [2820043]
- FIX: Column selection popup menu opens at the wrong location [2819588]
- FIX: When removing songs from favorites, not all songs were removed
- FIX: Extract Image action opens dialog in wrong monitor

aTunes 1.13.2
-------------
- FIX: Last.fm issue with new image size
- FIX: Wrong export to device with album artist pattern [2811019]
- FIX: Invalid handling of disc number [2810837]
- FIX: Mute bug with MPlayer engine
- FIX: Wrong colours if album cover is retrieved automatically [2795024]