@@ -54,6 +54,7 @@ aTunes 2.0.0
 - FIX: Podcast file renaming is not possible [2897134]
 - FIX: Progress bar should work for downloaded podcast entries
 - FIX: Progress bar improvements [2942626]
+- FIX: Normalization button causes multiple submissions to last.fm [2836230]
 
 aTunes 1.13.6
 -------------
